// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectableTemplateSitewide is rendered 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiPopover--displayBlock"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="aria-label"
            autocomplete="off"
            class="ouiFieldSearch ouiFieldSearch--fullWidth ouiSelectableSearch ouiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableTemplateSitewide props popoverButton is not rendered with popoverButtonBreakpoints xs 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiPopover--displayBlock"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="ouiFieldSearch ouiFieldSearch--fullWidth ouiSelectableSearch ouiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableTemplateSitewide props popoverButton is rendered 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button>
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableTemplateSitewide props popoverButton is rendered with popoverButtonBreakpoints m 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button>
        Button
      </button>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableTemplateSitewide props popoverFooter is rendered 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiPopover--displayBlock"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="ouiFieldSearch ouiFieldSearch--fullWidth ouiSelectableSearch ouiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableTemplateSitewide props popoverProps is rendered 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiPopover--displayBlock customPopoverClass"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="ouiFieldSearch ouiFieldSearch--fullWidth ouiSelectableSearch ouiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiSelectableTemplateSitewide props popoverTitle is rendered 1`] = `
<div
  class="ouiSelectable ouiSelectableTemplateSitewide"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiPopover--displayBlock"
  >
    <div
      class="ouiPopover__anchor"
    >
      <div
        class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
      >
        <div
          class="ouiFormControlLayout__childrenWrapper"
        >
          <input
            aria-activedescendant=""
            aria-haspopup="listbox"
            aria-label="Filter options"
            autocomplete="off"
            class="ouiFieldSearch ouiFieldSearch--fullWidth ouiSelectableSearch ouiSelectableTemplateSitewide__search"
            placeholder="Search for anything..."
            type="search"
            value=""
          />
          <div
            class="ouiFormControlLayoutIcons"
          >
            <span
              class="ouiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="ouiFormControlLayoutCustomIcon__icon"
                data-ouiicon-type="search"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
